fix sub heading alignment

--- a/index.css
+++ b/index.css
@@ -95,7 +95,7 @@ a:hover {
 }
 
 .card-header-text {
-    margin: auto auto auto 32px;
+    margin: auto auto auto 24px;
     padding-bottom: 6px;
     font-size: 32px;
     font-family: "Barlow Condensed", sans-serif;
